k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-backend-service
  labels:
    app: core-backend
    environment: dev
spec:
  trafficDistribution: PreferSameZone
  selector:
    app: core-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
