k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-backend-ingress
  labels:
    app: core-backend
    environment: dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Redirect HTTP to HTTPS
spec:
  ingressClassName: nginx-external
  rules:
    - host: to-do.mlopsbychandu.online  # Replace with your domain
      http:
        paths:
          - path: /backend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: core-backend-service
                port:
                  number: 80


  # tls:
  #   - hosts:
  #       - to-do.mlopsbychandu.online  # Replace with your domain
  #     secretName: core-observe-tls-secret  # The secret name where the TLS certificate is stored
